gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-compiler-builtins.rs
#![compiler_builtins] // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

